--- a/interior_design/assets/index.css
+++ b/interior_design/assets/index.css
@@ -1,3 +1,8 @@
+/* @font-face {
+    font-family: sansation;
+    src: url("/font/Sansation-Light.ttf");
+  } */
+
 *, *::before, *::after {
     box-sizing: border-box;
     margin: 0;
@@ -35,14 +40,26 @@ html {
 
 }
 
-body {
-    background-image: linear-gradient(to right,var(--background-color-left) 50%, var(--background-color-right) 50%);
+.container {
+    /* background: linear-gradient(90deg ,var(--background-color-left) 50%, var(--background-color-right) 50%); */
+    background: linear-gradient(90deg, var(--background-color-left) 50%, var(--background-color-right) 50%);
     /* background-image: linear-gradient(to right, #69908c 50%, #365651 50%); */
     display:flex;
     height:100vh;
+    width:100%;
     /* font-family: Arial, Helvetica, sans-serif; */
     /* font-family: 'Unica One', cursive; */
     font-family: 'Anaheim', sans-serif;
+    /* animation: curtains 10s ease-in-out infinite alternate; */
+}
+
+@keyframes curtains {
+    0% {
+        background-image: linear-gradient(90deg ,var(--background-color-left) 100%, var(--background-color-right) 0%);
+    }
+    100% {
+        background-image: linear-gradient(90deg ,var(--background-color-left) 50%, var(--background-color-right) 50%);
+    }
 }
 
 /** left section **/
@@ -50,20 +67,22 @@ body {
     width:50%;
     display:flex;
     flex-direction: column;
+    transition: all 3s;
 }
-
 .left-nav {
     color:var(--nav-bar-text);
-    width: 29rem;
+    width: 100%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     height: 15%;
     min-height: 4rem;
     max-height: 4.5rem;
 }
-
+.nav {
+    width:100%;
+}
 .left-nav .nav-logo{
-    width: 6.5rem;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -73,10 +92,12 @@ body {
     height: 3rem;
     width: 3rem;
     object-fit: contain;
+    margin: 0 0 0 1rem;
 }
 
 .left-nav ul {
-    width: 75%;
+    /* width: 75%; */
+    width: 24rem;
     display:flex;
     justify-content: space-between;
     align-items: center;
@@ -85,6 +106,16 @@ body {
     list-style-type: none;
 }
 
+.back {
+    width: 10%;
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+    font-size: 1rem;
+    font-family: 'Anaheim', sans-serif;
+    color:rgb(255, 100, 10);
+    display: none;
+}
 .pic-showcase-container {
     display:flex;
     height: 100%;
@@ -94,6 +125,7 @@ body {
     width:100%;
     position:relative;
     overflow: hidden;
+    border-top-right-radius: 5px;
 }
 
 .pic-container .pics {
@@ -101,7 +133,13 @@ body {
     top:0;
     left:0;
     height: 100%;
+    transition: all 4s;
 }
+
+.pics:not(.pic1){
+    opacity: 0;
+}
+
 
 .pic-controller {
     height: 100%;
@@ -122,8 +160,16 @@ body {
 }
 
 .arrow-up:hover .fa-arrow-up, .arrow-down:hover .fa-arrow-down {
+    color: orange;
+    /* transition: color 0.4s; */
+}
+
+.arrow-up:active .fa-arrow-up, .arrow-down:active .fa-arrow-down {
     color: white;
-    transition: color 0.7s;
+}
+
+.arrow-up {
+    color:gainsboro;
 }
 
 .arrow-up, .arrow-down {
@@ -143,7 +189,7 @@ body {
     width:3rem;
     height:3rem;
     border-radius: 50px;
-    border:white 1px solid;
+    border:rgb(207, 207, 207) 2px solid;
     background-image: linear-gradient(to bottom left, #69908c, #365651);
     z-index:-1;
     transition: all 1.5s;
@@ -178,6 +224,16 @@ body {
     width:50%;
     color:rgb(255, 100, 10);
 }
+
+@keyframes fadeIn {
+    0% {
+        linear-gradient(90deg, var(--background-color-left) 100%, var(--background-color-right) 0%);
+    }
+    100% {
+        linear-gradient(90deg, var(--background-color-left) 50%, var(--background-color-right) 50%)
+    }
+  }
+
 .right-nav {
     height: 15%;
     max-height: 4.5rem;
@@ -187,7 +243,7 @@ body {
     margin: 0 2rem;
 }
 
-button.credits {
+.credit-button, .hide-show-controller {
     padding:0.5rem 1rem;
     font-size: 1rem;
     font-family: 'Anaheim', sans-serif;
@@ -196,7 +252,9 @@ button.credits {
     border-radius: 4px;
     color:white;
     text-transform: capitalize;
+    z-index:10;
 }
+
 .right-container {
     height: 85%;
     display: grid;
@@ -211,6 +269,8 @@ h1 {
     display:flex;
     align-items: center;
     justify-content: center;
+    /* text-transform: uppercase; */
+    /* font-family: 'sansation', sans-serif; */
     font-family: 'Allura', cursive;
 }
 
@@ -276,5 +336,44 @@ button.create-product {
     margin:10px;
     color:var(--social-media);
 }
-
 /** END right section **/
+
+/** credits **/
+.credit-container {
+    display:block;
+    background-color: #000000;
+    color:white;
+    width:18%;
+    height:100%;
+    position: fixed;
+    top:0;
+    right:0;
+    text-align: center;
+    padding: 10px;
+    font-family: 'Anaheim', sans-serif;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transform: translateX(100%);
+    transition: all 2s;
+
+}
+
+.credit-heading {
+    line-height: 1;
+    font-size: 1.7vw;
+}
+
+.credits {
+    padding:0.5rem;
+    font-size:0.9vw;
+    border-radius: 5px;
+    line-height: 1.7;
+}
+
+.credits p a:link, .credits p a:visited {
+    color:white;
+}
+
+/*************/
