--- a/interior_design/assets/index.css
+++ b/interior_design/assets/index.css
@@ -301,6 +301,7 @@ button.create-product {
     padding: 1rem;
     display: flex;
     align-items: center;
+    justify-content: center;
     color:white;
     font-size: 1rem;
     font-family: 'Anaheim', sans-serif;
