--- a/interior_design/assets/index.css
+++ b/interior_design/assets/index.css
@@ -26,6 +26,7 @@ html {
 }
 
 body {
+    min-width: 240px;
     /* overflow-x: hidden; */
 }
 
@@ -133,7 +134,9 @@ body {
     position:absolute;
     top:0;
     left:0;
+    width: 100%;
     height: 100%;
+    object-fit: cover;
     transition: all linear 0.3s;
 }
 
@@ -482,6 +485,19 @@ button.create-product {
 
     .icon-container {
         margin-bottom: 1rem;
+    }
+
+    .credit-container {
+        width: 100vw;
+        z-index: 9;
+    }
+
+    .credit-heading {
+        font-size: 6vw;
+    }
+
+    .credits {
+        font-size: 1rem;
     }
 }
 
