--- a/interior_design/assets/index.css
+++ b/interior_design/assets/index.css
@@ -120,7 +120,7 @@ body {
 .pic-showcase-container {
     display: grid;
     grid-template-columns: 1fr 111px;
-    height: 100%;
+    height: calc(100% - 9rem)
 }
 
 .pic-container {
@@ -128,6 +128,7 @@ body {
     position:relative;
     overflow: hidden;
     border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .pic-container .pics {
@@ -300,8 +301,7 @@ h1 {
 }
 
 button.create-product {
-    height: 2.5rem;
-    padding: 1rem;
+    padding: 0.7rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -474,7 +474,6 @@ button.create-product {
         justify-content: center;
     }
     .create-product {
-        height: 2rem;
         padding: 1.5rem;
         margin-top: 3rem;
     }
