--- a/macarons_shop/assets/index.css
+++ b/macarons_shop/assets/index.css
@@ -239,3 +239,45 @@ a:hover {
   cursor: pointer;
 }
 /*** footer ***/
+
+.loading-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  z-index: 100;
+}
+.cookie-preloader {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+}
+
+#o {
+  animation: spin 2s infinite;
+  transform-origin: center;
+}
+#o_2 {
+  animation: spin 2s infinite;
+  transform-origin: center;
+  animation-delay: 0.3s;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.hide {
+  opacity: 0;
+  transition: opacity 2s;
+}
